--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,11 @@
 language: cpp
+
 script: make
+
+before_install:
+- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+- sudo apt-get update -qq
+
+install:
+- sudo apt-get install -qq g++-4.8
+- export CC="g++-4.8"
