Updated Makefile to use environment vars for user-settable vars and added building test bin to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ before_install:
 install:
 - sudo apt-get install -qq g++-4.8
 - export CXX="g++-4.8"
+- export TDIR="testing"
 
-script: make
+# try to build the normal bin and the testing bin
+script: make && make $(TDIR)/moe-serifu
