Updated Travis YML to correctly refer to testing dir in build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
 - export TDIR="testing"
 
 # try to build the normal bin and the testing bin
-script: make && make $(TDIR)/moe-serifu
+script: make && make $TDIR/moe-serifu
