Completed initial implementation of logging

--- a/msa.cfg
+++ b/msa.cfg
@@ -1,5 +1,14 @@
 # The main config file for the Moe Serifu Agent project
 
+[log]
+global_level = trace
+
+level = trace
+type = file
+format = text
+output = "[%1$-25s]: (%2$6s) %3$s"
+location = msa.log
+
 [event]
 idle_sleep_time = 10
 
