Added makefil and cfg for building log with threads

--- a/msa.cfg
+++ b/msa.cfg
@@ -6,7 +6,7 @@ global_level = trace
 level = trace
 type = file
 format = text
-output = "[%1$-25s]: (%2$6s) %3$s"
+output = "[%1$-25s] %2$15s: (%3$6s) %4$s"
 location = msa.log
 
 [event]
