--- a/msa.cfg
+++ b/msa.cfg
@@ -6,8 +6,9 @@ global_level = trace
 level = trace
 type = file
 format = text
-output = "[%1$-25s] %2$15s: (%3$6s) %4$s"
+output = "[%1$-25s] %2$-15s: %3$-5s %4$s"
 location = msa.log
+open_mode = overwrite
 
 [event]
 idle_sleep_time = 10
