Added output module to config file

--- a/msa.cfg
+++ b/msa.cfg
@@ -21,5 +21,10 @@ type = TTY
 id = stdin
 handler = get_tty_input
 
+[output]
+type = TTY
+id = STDOUT
+handler = print_to_stdout
+
 [cmd]
 announce = true
