Removed redundant ANNOUNCE command; replaced with ECHO Also replaced ANNOUNCE config file var with more flexible STARTUP var, which gives command to execute on startup

--- a/msa.cfg
+++ b/msa.cfg
@@ -15,7 +15,7 @@ idle_sleep_time = 10
 
 [agent]
 name = Masa-chan
-user_title = Nee-sama
+user_title = Master
 
 [input]
 type = TTY
@@ -28,4 +28,4 @@ id = STDOUT
 handler = print_to_stdout
 
 [cmd]
-announce = true
+startup = "echo Hi there, $USER_TITLE! I am at your command."
