Wired plugin manager into msa module

--- a/msa.cfg
+++ b/msa.cfg
@@ -27,5 +27,5 @@ type = TTY
 id = STDOUT
 handler = print_to_stdout
 
-[cmd]
+[command]
 startup = "echo Hi there, $USER_TITLE! I am at your command."
