Renamed enum constants to be lower case

--- a/msa.cfg
+++ b/msa.cfg
@@ -29,3 +29,6 @@ handler = print_to_stdout
 
 [command]
 startup = "echo Hi there, $USER_TITLE! I am at your command."
+
+[plugin]
+dir = plugin/autoload
