Moved root 'plugin' dir to 'plugins'

--- a/msa.cfg
+++ b/msa.cfg
@@ -31,4 +31,4 @@ handler = print_to_stdout
 startup = "echo Hi there, $USER_TITLE! I am at your command."
 
 [plugin]
-dir = plugin/autoload
+dir = plugins/autoload
