Starting work on timer subsystem of event dispatch

--- a/msa.cfg
+++ b/msa.cfg
@@ -11,7 +11,10 @@ location = msa.log
 open_mode = overwrite
 
 [event]
-idle_sleep_time = 10
+idle_sleep_time = 1
+
+# tick resolution is in milliseconds, and is not guaranteed
+tick_resolution = 10
 
 [agent]
 name = Masa-chan
