--- a/python/Pipfile
+++ b/python/Pipfile
@@ -6,10 +6,10 @@ name = "pypi"
 [packages]
 click = "*"
 schema = "*"
-prompt_toolkit = "*"
 termcolor = "*"
+colorama = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3"
+python_version = "3.6"
