--- a/python/Pipfile
+++ b/python/Pipfile
@@ -8,6 +8,9 @@ click = "*"
 schema = "*"
 termcolor = "*"
 colorama = "*"
+sphinx = "*"
+sphinx-rtd-theme = "*"
+recommonmark = "*"
 
 [dev-packages]
 
