adds basic python interpreter with a basic record command

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -11,6 +11,9 @@ colorama = "*"
 sphinx = "*"
 sphinx-rtd-theme = "*"
 recommonmark = "*"
+prompt-toolkit = "*"
+pygments = "*"
+ptpython = "*"
 
 [dev-packages]
 
