--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -15,6 +15,7 @@ prompt-toolkit = "^2.0"
 pygments = "^2.3"
 aiohttp = "^3.5"
 sphinx-rtd-theme = "^0.4.3"
+sqlalchemy-aio = "^0.14.1"
 
 [tool.poetry.dev-dependencies]
 sphinx = "^2.0"
