--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -15,9 +15,10 @@ prompt-toolkit = "^2.0"
 pygments = "^2.3"
 aiohttp = "^3.5"
 sphinx-rtd-theme = "^0.4.3"
-sqlalchemy-aio = "^0.14.1"
 aiocron = "^1.3"
 croniter = "^0.3.30"
+aiosqlite = "^0.10.0"
+tortoise-orm = "^0.13.7"
 
 [tool.poetry.dev-dependencies]
 sphinx = "^2.0"
