--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -24,6 +24,7 @@ tortoise-orm = "^0.13.7"
 sphinx = "^2.0"
 sphinx-rtd-theme = "^0.4.3"
 recommonmark = "^0.5.0"
+coverage = "^5.0.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
