--- a/python/sphinx/Makefile
+++ b/python/sphinx/Makefile
@@ -11,6 +11,9 @@ BUILDDIR      = _build
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
+api_dir:
+	sphinx-apidoc -o api ../msa
+
 .PHONY: help Makefile
 
 # Catch-all target: route all unknown targets to Sphinx using the new
