--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -25,6 +25,7 @@ sphinx = "^2.0"
 sphinx-rtd-theme = "^0.4.3"
 recommonmark = "^0.5.0"
 coverage = "^5.0.4"
+aiomonitor = "^0.4.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
