update api doc structure:

--- a/python/sphinx/Makefile
+++ b/python/sphinx/Makefile
@@ -12,6 +12,7 @@ help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 api_dir:
+	rm -rf api
 	sphinx-apidoc -o api ../msa
 
 .PHONY: help Makefile
