--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -19,6 +19,7 @@ aiocron = "^1.3"
 croniter = "^0.3.30"
 aiosqlite = "^0.10.0"
 tortoise-orm = "^0.13.7"
+tabulate = "^0.8.7"
 
 [tool.poetry.dev-dependencies]
 sphinx = "^2.0"
