--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["moe-serifu-circle"]
 license = "LGPL-3.0+"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.8"
 click = "^7.0"
 schema = "^0.7.0"
 termcolor = "^1.1"
@@ -27,6 +27,7 @@ sphinx-rtd-theme = "^0.4.3"
 recommonmark = "^0.5.0"
 coverage = "^5.0.4"
 aiomonitor = "^0.4.5"
+asynctest = "^0.13.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
