--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -20,7 +20,10 @@ croniter = "^0.3.30"
 aiosqlite = "^0.10.0"
 tortoise-orm = "^0.13.7"
 tabulate = "^0.8.7"
-feedparser = { version = "^6.0.1", optional=true }
+
+# below `extras`. They can be opted into by apps.
+feedparser = { version = "^6.0.1",  optional=true }
+
 
 [tool.poetry.dev-dependencies]
 sphinx = "^2.0"
@@ -29,6 +32,9 @@ recommonmark = "^0.5.0"
 coverage = "^5.0.4"
 aiomonitor = "^0.4.5"
 asynctest = "^0.13.0"
+
+[tool.poetry.extras]
+feed_plugin = ["feedparser"]
 
 [build-system]
 requires = ["poetry>=0.12"]
