--- a/.drone.yml
+++ b/.drone.yml
@@ -41,7 +41,7 @@ pipeline:
     commands:
       - cd python
       - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-      - poetry install 
+      - source $HOME/.poetry/env && poetry install 
       - "TEST=1 ./test_and_coverage.sh"
     when:
       event: [pull_request, push]
