--- a/.drone.yml
+++ b/.drone.yml
@@ -38,11 +38,13 @@ pipeline:
 
   run-python-tests:
     image: python:3.8
+    environment:
+      TEST: 1
     commands:
       - cd python
       - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
       - $HOME/.poetry/bin/poetry install 
-      - $HOME/.poetry/bin/poetry run "TEST=1 ./test_and_coverage.sh"
+      - $HOME/.poetry/bin/poetry run ./test_and_coverage.sh
     when:
       event: [pull_request, push]
       branch: master
