--- a/.drone.yml
+++ b/.drone.yml
@@ -43,7 +43,7 @@ pipeline:
     commands:
       - cd python
       - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-      - $HOME/.poetry/bin/poetry install 
+      - $HOME/.poetry/bin/poetry install -E feed_plugin -E notifications_plugin
       - $HOME/.poetry/bin/poetry run ./test_and_coverage.sh
     when:
       event: [pull_request, push]
