--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -15,7 +15,6 @@ prompt-toolkit = "^2.0"
 pygments = "^2.3"
 aiohttp = "^3.5"
 sphinx-rtd-theme = "^0.4.3"
-aiocron = "^1.3"
 croniter = "^0.3.30"
 aiosqlite = "^0.10.0"
 tortoise-orm = "^0.13.7"
@@ -26,6 +25,7 @@ tabulate = "^0.8.7"
 feedparser = { version = "^6.0.1",  optional=true }
 notifiers = { version = "^1.2.1", optional=true }
 docutils = "0.16"
+tzlocal = "^2.1"
 
 
 [tool.poetry.dev-dependencies]
